syntax = "proto3";

package stats.service.collector;

import "google/protobuf/empty.proto";
import "user_action.proto";

option java_multiple_files = true;
option java_package = "stats.service.collector";
option java_outer_classname = "CollectorServiceProto";

service UserActionController {
  rpc CollectUserAction (UserActionProto) returns (google.protobuf.Empty);
}